seguimos con la base de la web

--- a/style.css
+++ b/style.css
@@ -34,9 +34,26 @@ header {
 .card {
     display: flex;
     align-items: center;
+    margin: 2%;
 }
 
 .card p {
     flex: 1;
     margin: 0;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5%;
+    border-radius: 4%;
+    box-shadow: 2% rgba(0, 0, 0, 0.1);
+    text-align: center;
+    align-items: center;
+}
+
+.row img {
+    width: 60%;
+    height: 40%;
+    border-radius: 5%;
 }
